[package]
name = "tree-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
clap = { version = "4.3.4", features = ["derive", "cargo"] }
tokio = { version = "1.28.2", features = ["full"] }
